--- a/.config/sublime-text-2/Backup/20130609081409/Markdown Preview/mathjax.html
+++ b/.config/sublime-text-2/Backup/20130609081409/Markdown Preview/mathjax.html
@@ -2,7 +2,7 @@
 <script>
 MathJax.Hub.Config({
   config: ["MMLorHTML.js"],
-  extensions: ["tex2jax.js"],
+  extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
   jax: ["input/TeX"],
   tex2jax: {
     inlineMath: [ ['$','$'], ["\\(","\\)"] ],
@@ -10,7 +10,6 @@ MathJax.Hub.Config({
     processEscapes: false
   },
   TeX: {
-    extensions: ["AMSmath.js", "AMSsymbols.js"],
     TagSide: "right",
     TagIndent: ".8em",
     MultLineWidth: "85%",
